Don't send children of gtk menus to be cached

This is o(n^2) because of the way gtk's atk implementation implements
get_index_in_parent(). WOrking around it here for now.

https://bugzilla.gnome.org/show_bug.cgi?id=754048